Fix for OCR data truncation

--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -291,6 +291,7 @@
                 min-height: 150px;
                 max-height: 430px;
                 overflow: auto;
+                padding-bottom: 250px;
                 .appointment {
                     display: flex;
                     background-color: #fff;
